[package]
name = "lesswrong-api"
version = "0.1.0"
edition = "2021"

[dependencies]
graphql_client = "0.11.0"
reqwest = { version = "0.11.27", features = ["json"] }
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
chrono = { version = "0.4.39", features = ["serde"] }
async-trait = "0.1.86"
thiserror = "1.0.69"
serde_json = "1.0.107"